04-create-service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-demo-httpd
  namespace: name-space-name
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: demo-httpd
