05-create-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-demo-httpd
  namespace: name-space-name
spec:
  type: NodePort
  ports:
  - port: 80
  selector:
    app: demo-httpd
