06-create-service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-demo-httpd
  namespace: namespace-name
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: demo-httpd
