09-create-pv-pvc-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-grafana
  namespace: milky
  labels:
    app: app-grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-grafana
  template:
    metadata:
      labels:
        app: app-grafana
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
          name: web-port
          protocol: TCP
        volumeMounts:
          - mountPath: "/usr/share/nginx/html"
            name: grafana-vol
      volumes:
        - name: grafana-vol
          persistentVolumeClaim:
            claimName: myapp-pvc-01
---
apiVersion: v1
kind: Service
metadata:
  name: service-app-grafana
  namespace: milky
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: app-grafana
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-grafana-ingress
  namespace: milky
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # type of authentication
    #nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    #nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropriate context why the authentication is required
    #nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - milky'
spec:
  tls:
  - hosts:
      - app-grafana.ols-demo.dedyn.io
    secretName: my-tls-secret
  rules:
  - host: app-grafana.ols-demo.dedyn.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-app-grafana
            port:
              number: 80
